update css and html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>A importancia do aprendizado</h1>
+    <h2>Todos os aprendizados devem ser anotados.</h2>
     <p>Onde os fracos não tem vez.</p>
+
 </body>
 </html>
