update README and css and html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1>A importancia do aprendizado</h1>
     <h2>Todos os aprendizados devem ser anotados.</h2>
     <p>Onde os fracos não tem vez.</p>
+    <ul>
+        <li>Café</li>
+        <li>Leite</li>
+        <li>Chocolate</li>
+        <li>Chá</li>
+    </ul>
 
 </body>
 </html>
