update div in html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <ul>
         <li>Café</li>
         <li>Leite</li>
-        <li>Chocolate</li>
         <li>Chá</li>
     </ul>
-
+    <div>
+        
+    </div>
 </body>
 </html>
