update div li in html and css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <li>Chá</li>
     </ul>
     <div>
-        
+        <ul>
+            <li>About Us</li>
+            <li>Next</li>
+            <li>Prev</li>
+        </ul>
     </div>
 </body>
 </html>
